kiosk/ingress/echoserver.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
    name: echoserver-deploy
spec:
    replicas: 1
    selector:
        matchLabels:
            service: echoserver
    template:
        metadata:
            name: echoserver
            labels:
                service: echoserver
        spec:
            containers:
            - name: echoserver
              image: gcr.io/google_containers/echoserver:1.4
              ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: echoserver-svc
spec:
    type: NodePort
    selector:
        service: echoserver
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
