kiosk/ingress/nginx.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
    name: nginx-deploy
spec:
    replicas: 1
    selector:
        matchLabels:
            service: nginx
    template:
        metadata:
            labels:
                service: nginx
        spec:
            containers:
            - name: nginx
              image: nginx
              ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: nginx-svc
spec:
    type: NodePort
    selector:
        service: nginx
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
