kiosk/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-example
    annotations:
        ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: devops.k8s
      http:
          paths:
          - path: /welcome
            backend:
                serviceName: nginx-svc
                servicePort: 80
          - path: /echoserver
            backend:
                serviceName: echoserver-svc
                servicePort: 8080
